2008-05-21  Adam Roben  <aroben@apple.com>

        Fix Bug 19178: Inspector should support sorting resources by latency

        <https://bugs.webkit.org/show_bug.cgi?id=19178>

        I replaced "Sort by Time" with the following sorting options:
          - Sort by Start Time
          - Sort by Response Time
          - Sort by End Time
          - Sort by Duration
          - Sort by Latency

        You can no longer sort by Size when looking at the Time graph, and you
        can't use any of the time-based sorting functions when looking at the
        Size graph.

        Reviewed by Tim Hatcher.

        * page/inspector/Resource.js:
        (WebInspector.Resource.prototype.get duration): Added.
        (WebInspector.Resource.prototype.get latency): Added.
        (WebInspector.Resource.CompareByStartTime): Added.
        (WebInspector.Resource.CompareByResponseReceivedTime): Added.
        (WebInspector.Resource.CompareByEndTime): Added.
        (WebInspector.Resource.CompareByDuration): Added.
        (WebInspector.Resource.CompareByLatency): Added.
        * page/inspector/ResourcesPanel.js:
        (WebInspector.ResourcesPanel):
          - Each graph sidebar item now holds a list of sorting options
          - Graph sidebar items no longer have a calculator property. This is
            stored on the sorting options instead, to allow each kind of
            sorting to have a different calculator.
          - The sortingSelectElement starts out empty, and is populated in
            _graphSelected
          - The sortingFunction starts out uninitialized and is set as a
            side-effect of _graphSelected.
        (WebInspector.ResourcesPanel.prototype.set calculator): Don't do
        anything if the calculator hasn't changed.
        (WebInspector.ResourcesPanel.prototype.closeVisibleResource): Use the
        _lastSelectedGraphTreeElement property instead of getting the graph
        element from the calculator.